--- a/iphone/Maps/Classes/_MWMPPPAddress.xib
+++ b/iphone/Maps/Classes/_MWMPPPAddress.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="_MWMPPPAddress" id="bz2-BF-3Qa" customClass="_MWMPPPAddress">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="28"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="_MWMPPPAddress" rowHeight="44" id="bz2-BF-3Qa" customClass="_MWMPPPAddress">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bz2-BF-3Qa" id="kgP-ci-4Fj">
-                <frame key="frameInset" width="320" height="27"/>
+                <frame key="frameInset" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9gi-wZ-XKX" userLabel="Distance Box">
@@ -68,12 +68,12 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="9gi-wZ-XKX" secondAttribute="trailing" id="4IY-d9-7Qe"/>
+                    <constraint firstAttribute="trailing" secondItem="9gi-wZ-XKX" secondAttribute="trailing" constant="16" id="4IY-d9-7Qe"/>
                     <constraint firstItem="9gi-wZ-XKX" firstAttribute="leading" secondItem="g80-iK-Lm4" secondAttribute="trailing" priority="500" constant="8" id="QdH-SI-U3V"/>
                     <constraint firstAttribute="trailingMargin" secondItem="g80-iK-Lm4" secondAttribute="trailing" priority="750" id="ReC-iw-nQo"/>
                     <constraint firstItem="9gi-wZ-XKX" firstAttribute="top" secondItem="kgP-ci-4Fj" secondAttribute="top" constant="7" id="ahP-3e-LSZ"/>
                     <constraint firstItem="g80-iK-Lm4" firstAttribute="top" secondItem="kgP-ci-4Fj" secondAttribute="top" constant="7" id="dyX-RT-RyA"/>
-                    <constraint firstItem="g80-iK-Lm4" firstAttribute="leading" secondItem="kgP-ci-4Fj" secondAttribute="leading" id="eKV-2t-e5B"/>
+                    <constraint firstItem="g80-iK-Lm4" firstAttribute="leading" secondItem="kgP-ci-4Fj" secondAttribute="leading" constant="16" id="eKV-2t-e5B"/>
                     <constraint firstAttribute="bottom" secondItem="g80-iK-Lm4" secondAttribute="bottom" id="kMh-wD-wdh"/>
                 </constraints>
             </tableViewCellContentView>
@@ -84,7 +84,7 @@
                 <outlet property="distanceView" destination="9gi-wZ-XKX" id="9Lr-TG-2gw"/>
                 <outlet property="trailing" destination="ReC-iw-nQo" id="l2t-1p-S58"/>
             </connections>
-            <point key="canvasLocation" x="327" y="722"/>
+            <point key="canvasLocation" x="327" y="727"/>
         </tableViewCell>
     </objects>
     <resources>
