--- a/iphone/Maps/Classes/_MWMPPPBooking.xib
+++ b/iphone/Maps/Classes/_MWMPPPBooking.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment version="2048" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="_MWMPPPBooking" id="ngD-jq-BYV" customClass="_MWMPPPBooking">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="_MWMPPPBooking" id="ngD-jq-BYV" customClass="_MWMPPPBooking">
             <rect key="frame" x="0.0" y="0.0" width="320" height="30"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ngD-jq-BYV" id="Zth-C7-aXm">
@@ -26,7 +26,7 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="colorName" value="blackPrimaryText"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="separator_image" translatesAutoresizingMaskIntoConstraints="NO" id="t1Z-Sp-Xi5">
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="separator_image" translatesAutoresizingMaskIntoConstraints="NO" id="t1Z-Sp-Xi5">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="LZA-3w-U5e"/>
                                 </constraints>
@@ -53,8 +53,8 @@
                             <constraint firstItem="t1Z-Sp-Xi5" firstAttribute="leading" secondItem="F9f-pg-4uU" secondAttribute="leading" id="IVw-lx-R1A"/>
                             <constraint firstItem="Thk-j3-Or0" firstAttribute="leading" secondItem="Rhl-Xh-qMc" secondAttribute="trailing" constant="8" id="WoG-Ia-GgK"/>
                             <constraint firstItem="Rhl-Xh-qMc" firstAttribute="top" secondItem="F9f-pg-4uU" secondAttribute="top" id="Y2R-r3-PtN"/>
-                            <constraint firstAttribute="trailing" secondItem="Thk-j3-Or0" secondAttribute="trailing" id="g3j-ax-kfh"/>
-                            <constraint firstItem="Rhl-Xh-qMc" firstAttribute="leading" secondItem="F9f-pg-4uU" secondAttribute="leading" id="lTe-fz-jdC"/>
+                            <constraint firstAttribute="trailing" secondItem="Thk-j3-Or0" secondAttribute="trailing" constant="16" id="g3j-ax-kfh"/>
+                            <constraint firstItem="Rhl-Xh-qMc" firstAttribute="leading" secondItem="F9f-pg-4uU" secondAttribute="leading" constant="16" id="lTe-fz-jdC"/>
                             <constraint firstItem="Thk-j3-Or0" firstAttribute="top" secondItem="F9f-pg-4uU" secondAttribute="top" id="zO5-6f-qZD"/>
                         </constraints>
                     </view>
