[android] Added elevation to the routing plan menu.

--- a/android/res/layout/routing_plan.xml
+++ b/android/res/layout/routing_plan.xml
@@ -149,4 +149,8 @@
 
     </android.support.v7.widget.Toolbar>
   </FrameLayout>
+  <FrameLayout
+    style="@style/MwmWidget.FrameLayout.Elevation"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
 </LinearLayout>
