[android] Added copass y offset in landscape navigation mode.

--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -157,4 +157,7 @@
   <!-- Rating-->
   <dimen name="placepage_margin_rating">20dp</dimen>
 
+  <!-- Compass offset-->
+  <dimen name="compass_navigation_landscape_offset">-54dp</dimen>
+
 </resources>
