--- a/android/res/values/themes-attrs.xml
+++ b/android/res/values/themes-attrs.xml
@@ -66,6 +66,9 @@
     <attr name="routingButtonHint" format="color"/>
     <attr name="routingButtonPressedHint" format="color"/>
     <attr name="routingButtonActivatedHint" format="color"/>
+
+    <attr name="bannerText" format="color"/>
+    <attr name="bannerBackground" format="color"/>
   </declare-styleable>
 
   <declare-styleable name="ThemeAttrs.NavButtons">
