--- a/android/res/layout/fragment_search.xml
+++ b/android/res/layout/fragment_search.xml
@@ -22,21 +22,25 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
-      <android.support.design.widget.TabLayout
-        android:id="@+id/tabs"
-        android:theme="@style/ThemeOverlay.AppCompat"
+      <LinearLayout
+        android:id="@+id/tabs_layout"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tabs_height"
-        android:elevation="@dimen/appbar_elevation"
-        app:tabIndicatorColor="?colorAccent"
-        app:tabMode="fixed"
-        app:tabGravity="fill"/>
+        android:layout_height="wrap_content">
+        <android.support.design.widget.TabLayout
+          android:id="@+id/tabs"
+          android:theme="@style/ThemeOverlay.AppCompat"
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/tabs_height"
+          app:tabIndicatorColor="?colorAccent"
+          app:tabMode="fixed"
+          app:tabGravity="fill"/>
 
-      <View
-        android:id="@+id/tabs_divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="?dividerHorizontal"/>
+        <FrameLayout
+          style="@style/MwmWidget.FrameLayout.Elevation"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"/>
+      </LinearLayout>
 
       <android.support.v4.view.ViewPager
         android:id="@+id/pages"
