--- a/android/res/layout-land/map_navigation_buttons.xml
+++ b/android/res/layout-land/map_navigation_buttons.xml
@@ -25,7 +25,7 @@
     android:src="@drawable/ic_zoom_in"/>
 
   <ImageButton
-    android:id="@+id/nav_zoom_out"
+    android:id="@id/nav_zoom_out"
     style="@style/MwmWidget.MapButton"
     android:layout_above="@+id/my_position"
     android:layout_alignParentEnd="true"
@@ -34,7 +34,7 @@
     android:src="@drawable/ic_zoom_out"/>
 
   <ImageButton
-    android:id="@+id/my_position"
+    android:id="@id/my_position"
     style="@style/MwmWidget.MapButton"
     android:layout_alignParentBottom="true"
     android:layout_alignParentEnd="true"
