--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -59,8 +59,8 @@
   <dimen name="direction_frame_min_height">36dp</dimen>
 
   <!-- map widgets -->
-  <dimen name="margin_compass_left">32dp</dimen>
-  <dimen name="margin_compass_bottom">80dp</dimen>
+  <dimen name="margin_compass">34dp</dimen>
+  <dimen name="margin_compass_top">28dp</dimen>
   <dimen name="margin_ruler_left">10dp</dimen>
   <dimen name="margin_ruler_bottom">58dp</dimen>
 
@@ -109,9 +109,10 @@
   <dimen name="nav_icon_size">48dp</dimen>
   <dimen name="nav_bottom_gap">12dp</dimen>
 
-  <dimen name="nav_frame_padding">@dimen/margin_half</dimen>
+  <dimen name="nav_frame_padding">@dimen/margin_eighth</dimen>
   <dimen name="nav_button">28dp</dimen>
   <dimen name="nav_zoom_bottom">160dp</dimen>
+  <dimen name="nav_button_top_limit">68dp</dimen>
 
   <dimen name="panel_elevation">12dp</dimen>
   <dimen name="appbar_elevation">4dp</dimen>
@@ -156,9 +157,6 @@
 
   <!-- Rating-->
   <dimen name="placepage_margin_rating">20dp</dimen>
-
-  <!-- Compass offset-->
-  <dimen name="compass_navigation_landscape_offset">-54dp</dimen>
 
   <!-- Banner-->
   <dimen name="placepage_banner_height">46dp</dimen>
