[android] Added the traffic button in UI, core logic is not bound yet

--- a/android/res/layout-land/map_navigation_buttons.xml
+++ b/android/res/layout-land/map_navigation_buttons.xml
@@ -8,6 +8,14 @@
   android:theme="?navButtonsTheme">
 
   <ImageButton
+    android:id="@+id/traffic"
+    style="@style/MwmWidget.MapButton.Traffic"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:visibility="invisible"/>
+
+  <ImageButton
     android:id="@+id/nav_zoom_out"
     style="@style/MwmWidget.MapButton"
     android:layout_above="@+id/nav_zoom_in"
