--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -24,6 +24,10 @@
     <item name="android:tint">?iconTint</item>
   </style>
 
+  <style name="MwmWidget.MapButton.Traffic">
+    <item name="android:tint">@null</item>
+  </style>
+
   <style name="MwmWidget.Button">
     <item name="android:layout_width">@dimen/button_width</item>
     <item name="android:layout_height">@dimen/height_block_base</item>
