--- a/android/res/values/themes-attrs.xml
+++ b/android/res/values/themes-attrs.xml
@@ -56,6 +56,7 @@
 
     <attr name="myPositionButtonAnimation" format="reference"/>
     <attr name="wheelPendingAnimation" format="reference"/>
+    <attr name="trafficLoadingAnimation" format="reference"/>
 
     <attr name="navButtonsTheme" format="reference"/>
     <attr name="downloaderTheme" format="reference"/>
