--- a/android/res/layout/map_navigation_buttons.xml
+++ b/android/res/layout/map_navigation_buttons.xml
@@ -43,8 +43,8 @@
     style="@style/MwmWidget.MapButton"
     android:layout_alignParentEnd="true"
     android:layout_alignParentRight="true"
-    android:layout_alignParentBottom="true"
-    android:layout_marginBottom="@dimen/menu_line_height"
+    android:layout_below="@id/nav_zoom_out"
+    android:layout_marginTop="@dimen/margin_double"
     android:contentDescription="@string/my_position"
     android:tint="@null"/>
 </RelativeLayout>
